--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,9 @@
 # in the templates via {{ site.myvariable }}.
 title: Roberto Chello
 email: robertochello@gmail.com
+url: "https://robertochello.github.io"
+baseurl: ""
+repository: "robertochello/robertochello.github.io"
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
