--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Roberto Chello
+title_separator: "|"
+subtitle: "Version 2.0"
 email: robertochello@gmail.com
 url: "https://robertochello.github.io"
 baseurl: ""
