--- a/_config.yml
+++ b/_config.yml
@@ -142,7 +142,9 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
-
+repositories_archive:
+  type: liquid
+  path: /repositories/
 
 # Definizione della collection "repositories"
 collections:
