--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ plugins:
 
 author:
   name   : "Roberto Chello"
-  avatar : "/assets/images/bio-photo.jpg"
+  avatar : "/assets/images/Photo_CV.jpg"
   bio    : "Passionate about AI, automation, and robotics. I enjoy solving complex problems and developing efficient, real-world solutions in robotics and computer engineering. Open to new challenges."
   links:
     # - label: "Website"
