--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ defaults:
     values:
       author_profile: true                   # Mostra il profilo dell'autore nella homepage
       header:
-        overlay_image: /assets/images/Photo_CV.jpg  # Immagine di sfondo nell'header della homepage
+        overlay_image: ""  # Immagine di sfondo nell'header della homepage
         overlay_filter: 0.5                  # Filtro di trasparenza applicato all'immagine di overlay (0.5 = 50%)
 
   # ---------------------------
