--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
 permalink: /:categories/:title/
-paginate: 0 # amount of posts to show
+paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
@@ -79,6 +79,9 @@ author:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/robertochello"
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope"
+      url: "mailto:robertochello@gmail.com"
 
 footer:
   links:
