--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,7 @@
 main:
   - title: "Repositories"
-    description: "Maintained Repositories"
+    description: ""
     url: /repositories/
+  - title: "About"
+    description: ""
+    url: /about/
