--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ compress_html:
 
 
 # Site settings
+name: "Roberto Chello"
 title: Roberto Chello
 title_separator: "|"
 subtitle: ""
@@ -31,6 +32,8 @@ description: >-
 github_username: robertochello
 minimal_mistakes_skin: dark
 search: true
+locale: "en-US"
+breadcrumb: false
 
 # Build settings
 markdown: kramdown
