--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ defaults:
     values:
       author_profile: true
       header: 
-        overlay_image: /assets/images/header.jpg
+        overlay_image: /assets/images/header.png
         overlay_filter: 0.5
   # Default per i file della collection "repositories"
   # _pages
