--- a/_data/author.yml
+++ b/_data/author.yml
@@ -3,5 +3,5 @@
 # -------------------------------------------------------------------
 name: "Roberto Chello"
 avatar: "/assets/images/Photo_CV.jpg"   # ≥200 × 200 px recommended
-bio: "PLC & Automation Engineer"
+bio: "PLC & Automation Engfffffineer"
 location: "Italy"
